[gd_scene load_steps=5 format=3 uid="uid://dhev2kbdyj14q"]

[ext_resource type="Script" path="res://src/menu/credits_menu.gd" id="1_tt7rn"]
[ext_resource type="FontFile" uid="uid://ckdjks6e8qo4n" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_jm5b0"]

[sub_resource type="LabelSettings" id="LabelSettings_thmla"]
font = ExtResource("2_jm5b0")
font_size = 41

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fll4v"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.941176)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CreditsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt7rn")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 69.0
grow_horizontal = 2
text = "Credits"
label_settings = SubResource("LabelSettings_thmla")
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 39.0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 92.0
offset_right = 386.0
offset_bottom = 211.0
scale = Vector2(0.5, 0.5)

[node name="Label1" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Terry Hearst"
label_settings = SubResource("LabelSettings_thmla")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Andrew Moore"
label_settings = SubResource("LabelSettings_thmla")

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Kyle Reese"
label_settings = SubResource("LabelSettings_thmla")

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Miki"
label_settings = SubResource("LabelSettings_thmla")

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Grac√©"
label_settings = SubResource("LabelSettings_thmla")

[node name="Label6" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Probably more people!!"
label_settings = SubResource("LabelSettings_thmla")

[node name="ThirdPartyPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fll4v")

[node name="MarginContainer" type="MarginContainer" parent="ThirdPartyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ThirdPartyLabel" type="RichTextLabel" parent="ThirdPartyPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true

[node name="ThirdPartyButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -258.0
offset_top = -39.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Show All Third-Party Licenses"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ThirdPartyButton" to="." method="_on_third_party_button_pressed"]
